<resources>
    <string name="app_name">To-Do List</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="sur_name">Surname</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In.</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="okey">Okey</string>
    <string name="exit_application">Are you sure you want to exit the application?</string>
    <string name="task_name">Task Name</string>
    <string name="notes">Notes</string>
    <string name="deadline_calender">Deadline Calender</string>
    <string name="deadline_clock">Deadline Clock</string>
    <string name="todo_list_name">To-Do List Name</string>
    <string name="selected_tasks">Selected Tasks</string>
    <string name="selectable_tasks">Selectable Tasks</string>
    <string name="task">Task</string>
    <string name="priority">Priority</string>
    <string name="deadline">DeadLine</string>
    <string name="status">Status</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="export">Export</string>
    <string name="send_via_email">Send Via Email</string>
    <string name="save_locale">Save Locale</string>
    <string name="pdf_created">PDF Created</string>
    <string name="open_file">Open File</string>
    <string name="send_file">Send File</string>
    <string name="task_defination">Task Defination</string>
    <string name="please_select_date">Please Select Date</string>
    <string name="please_select_time">Please Select Time</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_enter_correctly">Please Enter Correctly</string>
    <string name="todolist_defination">To-do List Defination</string>
    <string name="please_select_some_tasks_in_selectable_view">Please Select Some Tasks In Selectable View !</string>
    <string name="created">Created</string>
    <string name="you_have_successfully_registered_please_login">You have successfully registered. Please Login.</string>
    <string name="please_active_permission"><![CDATA[Please activate the permissions in the section \"Applications>]]></string>
    <string name="please_active_permission_continue"><![CDATA[>Settings\]]></string>
    <string name="menu">Menu</string>
    <string name="todolists">To-Do Lists</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="dead_line">Deadline:</string>
    <string name="created_date">Created Date:</string>
    <string name="was_removed_from_the_list">was removed from the list.</string>
    <string name="undo">UNDO</string>
    <string name="completed">Completed</string>
    <string name="was_completed_from_the_list">was completed from the list.</string>
    <string name="events">Events</string>
    <string name="todo_lists">To-Do Lists</string>
    <string name="please_check_your_internet_connection">Please Check Your Internet Connection.</string>
    <string name="could_not_contact_the_service_please_try_again">Could not contact the service. Please Try Again.</string>
    <string name="please_wait">Please wait...</string>
    <string name="order">Order</string>
    <string name="no_filter">No Filter</string>
    <string name="show_only_completed">Show Only Completed</string>
    <string name="show_only_expired">Show Only Expired</string>


    <string-array name="status_list">
        <item>Created</item>
        <item>Progressing</item>
        <item>Completed</item>
    </string-array>

    <string-array name="priority_list">
        <item>Normal</item>
        <item>High</item>
        <item>Low</item>
    </string-array>

    <string-array name="language_list">
        <item>English</item>
        <item>Turkish</item>
    </string-array>
</resources>
