<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemOrder"
        android:icon="@drawable/ic_order_mini"
        android:title="@string/order"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/menuItemNoFilter"
                android:title="@string/no_filter"/>

            <item
                android:id="@+id/menuItemShowOnlyCompleted"
                android:title="@string/show_only_completed"/>

            <item
                android:id="@+id/menuItemShowOnlyExperid"
                android:title="@string/show_only_expired"/>

        </menu>

    </item>


    <item
        android:id="@+id/menuItemExport"
        android:icon="@drawable/ic_export_mini"
        android:title="@string/export"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/sendViaEmail"
                android:title="@string/send_via_email" />

            <item
                android:id="@+id/saveLocale"
                android:title="@string/save_locale" />

        </menu>

    </item>


</menu>