<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        tools:context=".UI.Activities.SignUpActivity"
        android:id="@+id/rootSignUp"
        style="@style/style_sign_root">

        <LinearLayout
            android:id="@+id/linearProps"
            style="@style/style_sign_props">

            <ImageView
                android:padding="32dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_large_logo"
                style="@style/style_sign_image_view"/>

            <EditText
                android:id="@+id/editTextUserName"
                android:hint="@string/user_name"
                android:inputType="textVisiblePassword"
                style="@style/style_sign_edittext"/>

            <EditText
                android:id="@+id/editTextUserPassword"
                android:hint="@string/password"
                style="@style/style_sign_edittext"/>

            <LinearLayout
                android:id="@+id/linearSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxRememberMe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/remember_me"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:text="@string/login"
                android:background="@color/blue25"
                style="@style/style_sign_button"/>

            <Button
                android:id="@+id/btnSignUp"
                android:text="@string/sign_up"
                android:background="@color/black25"
                style="@style/style_sign_button"/>

        </LinearLayout>

    </ScrollView>

</layout>