<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/rootTodoList"
        style="@style/style_other_root"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTodoLists"
            style="@style/style_events_header_text_view"
            android:text="@string/todo_lists" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:background="@color/primaryLightColor"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:id="@+id/txtTodoList"
                        style="@style/style_recycler_view_item_todo_task_header_text_view"
                        android:text="@string/todo_list_name" />

                    <TextView
                        android:id="@+id/txtCreatedDate"
                        style="@style/style_recycler_view_item_todo_task_header_text_view"
                        android:text="@string/created"/>

                    <TextView
                        android:id="@+id/txtTask"
                        style="@style/style_recycler_view_item_todo_task_header_text_view"
                        android:text="@string/task"/>

                    <TextView
                        android:id="@+id/txtPriority"
                        style="@style/style_recycler_view_item_todo_task_header_text_view"
                        android:text="@string/priority"/>

                    <TextView
                        android:id="@+id/txtDeadLine"
                        style="@style/style_recycler_view_item_todo_task_header_text_view"
                        android:text="@string/deadline"/>

                    <TextView
                        android:id="@+id/txtStatus"
                        style="@style/style_recycler_view_item_todo_task_header_text_view"
                        android:text="@string/status"/>

                </TableRow>

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:focusable="false"
                    android:iconifiedByDefault="false"
                    android:inputType="textVisiblePassword"
                    android:queryHint="Search By Task Name" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTodoListV2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/recycler_view_item_todolist_v2" />

            </TableLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>