<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/rootSettings"
        android:orientation="vertical"
        style="@style/style_other_root">

        <TextView
            android:id="@+id/txtSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:background="@color/primaryLightColor"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearInner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name">

                    <EditText
                        android:id="@+id/editTextFirstName"
                        android:inputType="text"
                        style="@style/style_sign_edittext" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputSurName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sur_name">

                    <EditText
                        android:id="@+id/editTextSurName"
                        android:inputType="text"
                        style="@style/style_sign_edittext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name">

                    <EditText
                        android:id="@+id/editTextUserName"
                        android:inputType="textVisiblePassword"
                        android:enabled="false"
                        style="@style/style_sign_edittext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password">

                    <EditText
                        android:id="@+id/editTextUserPassword"
                        android:inputType="textPassword"
                        style="@style/style_sign_edittext"/>


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputConfirmUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password">

                    <EditText
                        android:id="@+id/editTextConfirmUserPassword"
                        android:inputType="textPassword"
                        style="@style/style_sign_edittext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:inputType="textEmailAddress"
                        style="@style/style_sign_edittext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnUpdate"
                    android:text="@string/update"
                    android:background="@color/secondaryColor"
                    style="@style/style_sign_button"/>

                <Button
                    android:id="@+id/btnDelete"
                    android:text="@string/delete"
                    android:background="@color/secondaryDarkColor"
                    style="@style/style_sign_button"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</layout>