<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        tools:context=".UI.Activities.FirstSection.SignInActivity"
        android:id="@+id/rootSignIn"
        style="@style/style_sign_root">

        <LinearLayout
            android:id="@+id/linearProps"
            style="@style/style_sign_props">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearInner"
                    style="@style/style_sign_inner">

                    <ImageView
                        android:padding="32dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_logo_medium"
                        style="@style/style_sign_image_view"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name">

                        <EditText
                            android:id="@+id/editTextFirstName"
                            android:inputType="text"
                            style="@style/style_sign_edittext" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputSurName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sur_name">

                        <EditText
                            android:id="@+id/editTextSurName"
                            android:inputType="text"
                            style="@style/style_sign_edittext"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name">

                        <EditText
                            android:id="@+id/editTextUserName"
                            android:inputType="textVisiblePassword"
                            style="@style/style_sign_edittext"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputUserPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password">

                        <EditText
                            android:id="@+id/editTextUserPassword"
                            android:inputType="textPassword"
                            style="@style/style_sign_edittext"/>


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputConfirmUserPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password">

                        <EditText
                            android:id="@+id/editTextConfirmUserPassword"
                            android:inputType="textPassword"
                            style="@style/style_sign_edittext"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email">

                        <EditText
                            android:id="@+id/editTextEmail"
                            android:inputType="textEmailAddress"
                            style="@style/style_sign_edittext"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnSignUp"
                        android:text="@string/sign_up"
                        android:background="@color/secondaryColor"
                        style="@style/style_sign_button"/>

                    <TextView
                        android:id="@+id/txtAlreadyHaveAnAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account_sign_in"
                        android:textColor="@color/secondaryDarkColor"
                        android:textAlignment="center"
                        android:fontFamily="@font/roboto"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="16dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</layout>