<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/rootRecyclerViewItemTasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/linearInner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/txtEditItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:padding="8dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contraintDeadCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgDeadLineCalender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:padding="8dp"
                    android:src="@drawable/ic_alarm_mini"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearDeadLineCalaneder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/imgDeadLineCalender"
                    app:layout_constraintStart_toEndOf="@id/imgDeadLineCalender"
                    app:layout_constraintTop_toTopOf="@+id/imgDeadLineCalender">

                    <TextView
                        android:id="@+id/txtDeadLineCalender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/deadline_calender"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtEditDeadLineCalender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contraintDeadLineClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgDeadLineClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:padding="8dp"
                    android:src="@drawable/ic_alarm_clock_mini"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearDeadLineClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/imgDeadLineClock"
                    app:layout_constraintStart_toEndOf="@id/imgDeadLineClock"
                    app:layout_constraintTop_toTopOf="@+id/imgDeadLineClock">

                    <TextView
                        android:id="@+id/txtDeadLineClock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/deadline_clock"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txtEditDeadLineClock"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contraintPriorty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgPriorty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:padding="8dp"
                    android:src="@drawable/ic_flag_mini"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearPriorty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/imgPriorty"
                    app:layout_constraintStart_toEndOf="@id/imgPriorty"
                    app:layout_constraintTop_toTopOf="@+id/imgPriorty">

                    <TextView
                        android:id="@+id/txtPriorty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/priority"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/imgPriorty"
                        app:layout_constraintTop_toTopOf="@id/imgPriorty" />

                    <TextView
                        android:id="@+id/txtEditPriort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text=""
                        app:layout_constraintBottom_toBottomOf="@id/imgPriorty"
                        app:layout_constraintStart_toEndOf="@+id/imgPriorty" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>